Fix form on mobile view

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -498,7 +498,7 @@ img {
     }
     .form-container {
      padding: 10px;
-     width: 100%;
+     width: 75%;
     }
 
 
